--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,9 +1,9 @@
 spring:
   mail:
-    host: smtp.google.com
+    host: smtp.gmail.com
     port: 587
     username: mismancelaleddin@gmail.com
-    password: kvyllzyavetxflef
+    password: 'kvyllzyavetxflef'
     properties:
       mail:
         smtp:
